--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-# remote_theme: just-the-docs/just-the-docs
-theme: just-the-docs
+remote_theme: just-the-docs/just-the-docs
+# theme: just-the-docs
 
 incremental: true
 
